bullets vanish after a bit